--- a/web/themes/digitac/templates/nodes/node--reto.html.twig
+++ b/web/themes/digitac/templates/nodes/node--reto.html.twig
@@ -86,7 +86,7 @@
       <div class="challenge__header">
         <div class="challenge__header-content">
           <div class="tag">
-            {{ content.	field_reto_categoria.0 }}
+            {{ content.field_reto_categoria.0 }}
           </div>
 
           <div class="title">
@@ -101,12 +101,11 @@
               <clipPath id="clip-path2">
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M90.7875 33.8323L90.7882 33.8317C110.553 15.1475 141.722 16.0235 160.406 35.7884L407.639 297.321C426.323 317.086 425.447 348.255 405.682 366.939L405.681 366.94C385.916 385.624 354.747 384.748 336.063 364.983L88.8307 103.451C70.1465 83.6857 71.0226 52.5166 90.7875 33.8323ZM289.788 59.8317L289.787 59.8323C270.023 78.5165 269.146 109.686 287.831 129.451L391.22 238.82C409.904 258.585 441.073 259.461 460.838 240.776L460.839 240.776C480.604 222.092 481.48 190.922 462.795 171.157L359.406 61.7884C340.722 42.0235 309.553 41.1475 289.788 59.8317ZM106.319 163.332C87.6344 143.567 56.4645 142.692 36.6996 161.376C16.9347 180.061 16.0586 211.23 34.7428 230.995L148.901 351.755C167.585 371.52 198.755 372.396 218.52 353.711C238.284 335.027 239.161 303.858 220.476 284.093L106.319 163.332Z" fill="#FF5353"/>
               </clipPath>
-              <image clip-path="url(#clip-path2)" width="497" height="401" preserveAspectRatio="xMidYMid slice" href="{{ content.field_pg_claim_imagen.0['#markup']}}" alt="Image" class="svg__image">
+              <image clip-path="url(#clip-path2)" width="497" height="401" preserveAspectRatio="xMidYMid slice" href="{{ content.field_reto_imagen.0|render|striptags|trim}}" alt="Image" class="svg__image">
             </svg>
 
         </div>
       </div>
-
 
     </div> {# challenge #}
 
