--- a/web/themes/digitac/templates/paragraphs/paragraph--usuario-stats.html.twig
+++ b/web/themes/digitac/templates/paragraphs/paragraph--usuario-stats.html.twig
@@ -56,9 +56,7 @@
             <div class="user-ball">
 
               {% set siglas = usuario.account.name|striptags|split(' ') %}
-              {% for item in siglas%}
-                {{ item|first|upper }}
-              {% endfor %}
+  						{% for item in siglas%}{{ item|first|upper|trim }}{% endfor %}
 
               {% if 'experto' in usuario.account.getroles()  %}
               <div class="star_expertoTac">
