--- a/web/themes/digitac/templates/views/views-view-fields--distributivas--block.html.twig
+++ b/web/themes/digitac/templates/views/views-view-fields--distributivas--block.html.twig
@@ -29,9 +29,7 @@
         <div class="author">
             <span class="author__letters">
                 {% set siglas = fields.uid.content|render|striptags|trim|split(' ') %}
-                {% for item in siglas%}
-                    {{ item|first|upper }}
-                {% endfor %}
+                {% for item in siglas%}{{ item|first|upper|trim }}{% endfor %}
 
                 {% if 'experto' in user.getroles()  %}
                 <div class="star_expertoTac"><img src="/themes/digitac/images/icons/icon-verified.svg" alt="" /></div>
