--- a/web/themes/digitac/scss/digitac-hub.scss
+++ b/web/themes/digitac/scss/digitac-hub.scss
@@ -61,6 +61,7 @@
 @import '03_component/modal';
 @import '03_component/tooltip';
 @import '03_component/block-formblock-user-edit';
+@import '03_component/alert';
 
 
 /* @import '03_component/article-head';
