--- a/web/themes/digitac/templates/views/views-view--distributivas.html.twig
+++ b/web/themes/digitac/templates/views/views-view--distributivas.html.twig
@@ -58,14 +58,14 @@
       {% if display_id == 'block_1' %}
         <div class="block-empty">
           <span class="block-empty__title">{{ 'Oooooops'|t }}</span>
-          <span class="block-empty__subtitle">{{ 'Parece que no hay ideas opr aqui'|t }}</span>
+          <span class="block-empty__subtitle">{{ 'Parece que no hay ideas por aquí'|t }}</span>
           <span class="block-empty__text">{{ '¿Por que no propones tu la primera?'|t }}</span>
           <a class="btn btn--primary btn-primary--icon btn-primary--icon-check" href='/nueva-idea/{{view.args[0]}}'>{{ 'Nueva idea'|t }}</a>
         </div>
       {% elseif display_id == 'block_3' %}
         <div class="block-empty">
           <span class="block-empty__title">{{ 'Oooooops'|t }}</span>
-          <span class="block-empty__subtitle">{{ 'Parece que no hay experiencias opr aqui'|t }}</span>
+          <span class="block-empty__subtitle">{{ 'Parece que no hay experiencias por aquí'|t }}</span>
           <span class="block-empty__text">{{ '¿Por que no propones tu la primera?'|t }}</span>
           <a class="btn btn--primary btn-primary--icon btn-primary--icon-check" href='/nueva-experiencia/{{view.args[0]}}'>{{ 'Nueva experiencia'|t }}</a>
         </div>
