--- a/web/themes/digitac/scss/03_component/_form.scss
+++ b/web/themes/digitac/scss/03_component/_form.scss
@@ -146,7 +146,12 @@
 
     .form-managed-file {
         display: flex;
+        flex-direction: column;
         align-items: center;
+
+        @include media(md) {
+            flex-direction: row;
+        }
 
         &.image-widget {
             align-items: flex-start;
@@ -157,6 +162,22 @@
         .form-submit {
             margin-top: 0;
             margin-left: rem(16px);
+            color: $grey-700;
+            border-color: $grey-300;
+            background-color: $white;
+            padding-left: rem(40px);
+            position: relative;
+            background-image: url('../images/icons/icon-trash-black.svg');
+            background-repeat: no-repeat;
+            background-size: rem(20px);
+            background-position: rem(12px) center;
+
+            &:hover {
+                border-color: $grey-300;
+                background-color: $grey-50;
+                color: $grey-700;
+            }
+
         }
     }
 
@@ -217,6 +238,39 @@
                 display: none;
             }
         }
+
+        .file--mime-application-pdf {
+            padding: rem(10px) 0;
+            background: none;
+            display: inline-flex;
+
+            a {
+                padding-left: rem(52px);
+                font-family: $font-family-base;
+                font-style: normal;
+                font-weight: 500;
+                font-size: rem(14px);
+                line-height: rem(20px);
+                text-decoration: none;
+                color: $blue-600;
+                pointer-events: none;
+                position: relative;
+
+                &::before {
+                    content: '';
+                    width: rem(40px);
+                    height: rem(40px);
+                    background-image: url('../images/icons/icon-pdf.svg');
+                    background-repeat: no-repeat;
+                    background-position: center;
+                    background-size: 40px;
+                    position: absolute;
+                    top: 50%;
+                    left: 0;
+                    transform: translateY(-50%);
+                }
+            }
+        }
     }
 
     .file + .file-widget-data {
@@ -239,11 +293,14 @@
         }
 
         + .image-widget-data {
+            //margin-bottom: rem(26px) !important;
             padding: 0;
             border: none;
             border-radius: 0;
             background: none;
             overflow: inherit;
+            display: flex;
+            flex-direction: column-reverse;
 
             &::before {
                 display: none;
@@ -252,22 +309,70 @@
             img {
                 display: none;
             }
-
             .description {
                 margin-top: rem(6px);
+                padding-left: 0;
+
+                &::before {
+                    display: none;
+                }
+            }
+
+            .file--image {
+                padding-left: 0;
+                background: none;
+                margin-bottom: 20px;
+
+                @include media(md) {
+                    margin-top: rem(-62px);
+                    padding-right: rem(136px);
+                }
+
+                a {
+                    font-family: $font-family-base;
+                    font-style: normal;
+                    font-weight: 500;
+                    font-size: rem(14px);
+                    line-height: rem(20px);
+                    text-decoration: none;
+                    color: $blue-600;
+                    pointer-events: none;
+                }
             }
 
             .form-submit {
                 width: auto !important;
-                margin-top: 0 !important;
-                margin-bottom: rem(20px);
+                margin-top: rem(-45px) !important;
+                margin-bottom: rem(30px);
                 margin-left: auto;
                 display: inherit;
+                color: $grey-700;
+                border-color: $grey-300;
+                background-color: $white;
+                padding-left: rem(40px);
+                position: relative;
+                background-image: url('../images/icons/icon-trash-black.svg');
+                background-repeat: no-repeat;
+                background-size: rem(20px);
+                background-position: rem(12px) center;
+
+
+                @include media(md) {
+                    margin-top: 0 !important;
+                }
+
+
+                &:hover {
+                    border-color: $grey-300;
+                    background-color: $grey-50;
+                    color: $grey-700;
+                }
             }
         }
     }
 
     .description {
+        margin-bottom: rem(32px);
         padding-left: rem(36px);
         position: relative;
 
@@ -295,53 +400,82 @@
 }
 
 .card {
-    /* .form-type-managed-file {
-        .form-managed-file {
-            width: 100%;
-            margin: 0 0 rem(8px) !important;
-            padding: rem(16px) rem(24px);
-            border-radius: rem(12px);
-            border: rem(1px) dotted $grey-300;
+    max-width: rem(904px);
+
+    .tabledrag-toggle-weight-wrapper {
+        display: none;
+    }
+
+    .table {
+        max-width: rem(850px);
+
+        .tabledrag-hide {
+            display: none;
+        }
+
+        td {
+            vertical-align: middle;
+        }
+
+        .form-submit {
+            width: auto !important;
+            margin-left: auto;
+            color: $grey-700;
+            border-color: $grey-300;
             background-color: $white;
+            padding-left: rem(40px);
             position: relative;
-            overflow: hidden;
-            margin: rem(10px);
+            background-image: url('../images/icons/icon-trash-black.svg');
+            background-repeat: no-repeat;
+            background-size: rem(20px);
+            background-position: rem(12px) center;
 
-            &::before {
-                content: "Seleccionar imagen";
-                width: rem(200px);
-                height: rem(36px);
-                padding-left: rem(24px);
-                background-color: $white;
-                background-image: url("../images/icons/icon-cloud.svg");
-                background-repeat: no-repeat;
-                background-size: rem(20px);
-                background-position: rem(10px) center;
-                border: rem(1px) solid $grey-300;
-                display: inline-flex;
-                justify-content: center;
-                align-items: center;
-                border-radius: rem(50px);
-                position: relative;
-                z-index: 2;
-            }
-
-            .form-file {
-                width: rem(200px);
-                height: rem(36px);
-                position: absolute;
-                top: rem(16px);
-                left: rem(24px);
-                margin: 0;
-                padding: 0;
-                font-size: rem(20px);
-                cursor: pointer;
-                opacity: 0;
-                z-index: 4;
-                filter: alpha(opacity=0);
+            &:hover {
+                border-color: $grey-300;
+                background-color: $grey-50;
+                color: $grey-700;
             }
         }
-    } */
+    }
+
+    .form-submit {
+        margin-top: 0;
+
+    }
+
+    .file--mime-application-pdf {
+        padding: rem(10px) 0;
+        background: none;
+        display: inline-flex;
+
+        a {
+            padding-left: rem(52px);
+            font-family: $font-family-base;
+            font-style: normal;
+            font-weight: 500;
+            font-size: rem(14px);
+            line-height: rem(20px);
+            text-decoration: none;
+            color: $blue-600;
+            pointer-events: none;
+            position: relative;
+
+            &::before {
+                content: '';
+                width: rem(40px);
+                height: rem(40px);
+                background-image: url('../images/icons/icon-pdf.svg');
+                background-repeat: no-repeat;
+                background-position: center;
+                background-size: 40px;
+                position: absolute;
+                top: 50%;
+                left: 0;
+                transform: translateY(-50%);
+            }
+        }
+    }
+
 
     .table {
         img {
