modales nuevo reto idea experiencia

--- a/web/themes/digitac/templates/content/comment.html.twig
+++ b/web/themes/digitac/templates/content/comment.html.twig
@@ -168,8 +168,7 @@
 </div>
 
 
-<!-- MODAL -->
-<div class="modal modal-delete fade" id="loginModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal modal-idea fade" id="loginModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -180,7 +179,8 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-footer">
-        <a href="/user/login" type="button" class="btn btn-primary btn-primary--alt">Login</a>
+        <a href="/user/login" type="button" class="btn btn-secondary">{{'Entrar en mi cuenta'|t}}</a>
+        <a href="/user/login" type="button" class="btn btn-primary">{{'Registrarme'|t}}</a>
       </div>
     </div>
   </div>
