--- a/web/themes/digitac/templates/system/page--404.html.twig
+++ b/web/themes/digitac/templates/system/page--404.html.twig
@@ -75,7 +75,7 @@ set footer_classes = 'footer' ~
         <span class="tag">Errror tipo 404. Página no encontrada</span>
         <h2 class="title">No hemos encontrado lo que buscas</h2>
         <p>Prueba a comenzar desde la página principal</p>
-        <a href="#" class="btn btn-primary">Ir a la página principal</a>
+        <a href="/" class="btn btn-primary">Ir a la página principal</a>
       </div>
     </div>
   </div>
