--- a/web/themes/digitac/scss/03_component/_modal.scss
+++ b/web/themes/digitac/scss/03_component/_modal.scss
@@ -2,6 +2,7 @@
     $modalParent: ".modal";
     z-index: 4;
     transition: all 0.3s ease;
+    background:rgba(0, 0, 0, 0.45);
 
     &.show {
         display: flex !important;
@@ -130,5 +131,6 @@
 
     &-backdrop {
         z-index: 3;
+        display: none !important;
     }
 }
