--- a/web/themes/digitac/templates/content/comment.html.twig
+++ b/web/themes/digitac/templates/content/comment.html.twig
@@ -168,12 +168,12 @@
 </div>
 
 
-<div class="modal modal-idea fade" id="loginModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal modal-idea fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalStructure" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
         <div class="modal-header__content">
-          <h3 class="modal-title" id="exampleModalLabel">{{'Login'|t}}</h3>
+          <h3 class="modal-title" id="loginModalStructure">{{'Login'|t}}</h3>
           <p>{{'Para hacer un comentario necesitas estar logado'|t}}</p>
         </div>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
