--- a/web/themes/digitac/templates/system/page--user--login.html.twig
+++ b/web/themes/digitac/templates/system/page--user--login.html.twig
@@ -77,8 +77,8 @@ set footer_classes = 'footer' ~
       <div class="login__col login__col-right">
         <div class="login__col-container">
           <div class="login__col-description">
-            <h1>Entra en tu cuenta</h1>
-            <p>¿Aún no tienes cuenta? <a href="/user/register">Registrate</a></p>
+            <h1>{{'Entra en tu cuenta'|t}}</h1>
+            <p>{{'¿Aún no tienes cuenta?'|t}} <a href="/user/register">{{'Regístrate'|t}}</a></p>
           </div>
 
           {{ page.content }}
