--- a/web/themes/digitac/templates/system/page--user--register.html.twig
+++ b/web/themes/digitac/templates/system/page--user--register.html.twig
@@ -85,8 +85,8 @@ set footer_classes = 'footer' ~
 			<div class="register__col register__col-right">
 				<div class="register__col-container">
 					<div class="register__col-description">
-						<h2>Entra en tu cuenta</h2>
-						<p>Date de alta y participa en la comunidad de Digitac HUB. Todos los campos marcados con * son obligatorios</p>
+						<h2>{{'Registro'|t}}</h2>
+						<p>{{'Date de alta y participa en la comunidad de Digitac HUB. Todos los campos marcados con * son obligatorios'|t}}</p>
 					</div>
 
 					{{ page.content }}
